--- a/sketch.properties
+++ b/sketch.properties
@@ -1,9 +1,9 @@
-#Fri Aug 12 20:49:38 GMT+02:00 2022
-manifest.sdk.target=26
-manifest.orientation=unspecified
-manifest.sdk.min=17
-manifest.version.name=1.0
-manifest.permissions=
-manifest.version.code=1
-manifest.package=processing.test.timetable
+main=sketch.pde
 manifest.label=TimeTable2022
+manifest.orientation=unspecified
+manifest.package=processing.test.timetable
+manifest.permissions=
+manifest.sdk.min=17
+manifest.sdk.target=26
+manifest.version.code=1
+manifest.version.name=1.0
